Css Finished (Mobile)

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="email__form">
         <form class="email__input">
           <input type="email" name="email" id="email" placeholder="Your email address..." required>
-          <button type="submit">Notify Me</button>
         </form>
+        <button type="submit">Notify Me</button>
       </div>
       <div class="image">
         <img src="./images/illustration-dashboard.png" alt="Dashboard">
@@ -35,7 +35,7 @@
         <li class="rodape__itens">
             <a 
               href="http://facebook.com">
-              <img src="./images/icons8-f-do-facebook.svg" alt="Logo facebook">
+              <img src="./images/icons8-f-do-facebook (1).svg" alt="Logo facebook">
             </a>
         </li>
         <li class="rodape__itens">
@@ -47,7 +47,7 @@
         <li class="rodape__itens">
           <a 
             href="http://instagram.com">
-            <img src="./images/icons8-instagram-42.svg" alt="Logo instagram">
+            <img src="./images/icons8-instagram.svg" alt="Logo instagram">
           </a>
         </li>
       </ul>
