:bulb: docs: Id adicionado ao botão

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="email__form">
         <form class="email__input">
           <input type="email" name="email" id="email" placeholder="Your email address..." required>
-          <button type="submit">Notify Me</button>
+          <button type="submit" id="submit">Notify Me</button>
         </form>
         <div class="email__error" id="email-error"></div>
       </div>
